[gd_scene load_steps=3 format=3 uid="uid://title_scene"]

[ext_resource type="Script" path="res://scripts/Title.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://oak" path="res://assets/oak.png" id="2"]

[node name="Title" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.941176, 0.941176, 1, 1)

[node name="OakImage" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -150.0
offset_right = 150.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2")
ignore_texture_size = true
stretch_mode = 5

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 50.0
offset_right = 200.0
offset_bottom = 100.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 48
text = "포켓몬 야생 배틀"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -200.0
offset_right = 100.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 10

[node name="BtnSquirtle" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "꼬부기 선택"

[node name="BtnCharmander" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "파이리 선택"

[node name="BtnBulbasaur" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "이상해씨 선택"

[node name="BtnPikachu" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "피카츄 선택"
